tenth commit alignment fixed

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,12 +11,18 @@
 
 */
   
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .container {
     justify-content: center;
     align-content: center;
 }
   .button-container {
-    display: inline-block;
     margin: 10px; 
   }
   
@@ -44,7 +50,8 @@
   .backButton{
     background-color: black;
     width: 70px;
-    height: 70px;
+    height: 220px;
+    border-radius: 5px;
 
   }
 
